<resources>
    <string name="app_name" translatable="false">QR Barcode Scanner And Generator</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Nandur93 Studio</string>
    <string name="nav_header_subtitle" translatable="false">nandang.dhe@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="qr_generator" translatable="false">QR Generator</string>
    <string name="qr_scanner" translatable="false">QR Scanner</string>
    <string name="scan_message">Scan a Barcode or QR Code</string>

    <!-- Preference Titles -->
    <string name="about_header">About</string>
    <string name="update_header">Update</string>
    <string name="help_header">Help</string>

    <!-- About Preferences -->
    <string name="about_summary">QR Barcode Scanner And Generator is the application that makes your work easier.\nWith the features of QR Scanner, QR Generator and OCR as well as share text to QR make this application more complete than ordinary QR scanners.\nDeveloped by Nandur93 Studio - Karawang, Indonesia.</string>

    <!-- Update Preferences -->
    <string name="update_title">Check for update</string>

    <!-- Feedback Preferences -->
    <string name="feedback_title">Feedback</string>
    <string name="choose_email_client">Choose mailing client</string>
    <string name="feedback_body">Feedback for</string>

    <!-- Version Preferences -->
    <string name="version_title">Version</string>
    <string name="version_summary" translatable="false">1.0.0</string>
    <string name="update_summary">Tap here to check for updates</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="menu_title_communicate">Communicate</string>
    <string name="bitly_share" translatable="false">https://bit.ly/</string>
    <string name="build_title" translatable="false">Build</string>
    <string name="update_xml_resource" translatable="false">https://raw.githubusercontent.com/nandur93/QR-Barcode-Scanner-And-Generator/master/update-changelog.xml</string>
    <string name="pattern_mailbody">\n\n-----------------------------\nPlease do not delete this section\nDevice OS: Android\nDevice OS version: {0}\nApp Version: {1} build {5}\nDevice Brand: {2}\nDevice Model: {3}\nDevice Manufacturer: {4}</string>
    <string name="hashtag" translatable="false">#ocrtoqr</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_ocr" translatable="false">OCR ML KIT</string>
    <string name="bitly_dynamic" translatable="false">ocrtoqr</string>
    <string name="type_here_to_generate_qr">Type here to generate QR</string>
    <string name="realtime_qr_generator" translatable="false">Realtime QR generator view</string>
    <string name="button_scan_ocr" translatable="false">OCR to QR</string>
    <string name="disableDeathOnFileUriExposure" translatable="false">disableDeathOnFileUriExposure</string>
    <string name="regex" translatable="false"><![CDATA[[|?*<\":>+\\[\\]/\']]]></string>
    <string name="action_text_to_qr">Text To QR Code</string>
    <string name="sdcard_permission_declined">Access to SD Card is not granted, the application cannot save QR Code</string>
    <string name="sdcard_permission_accepted">Access granted</string>
    <string name="folder_directory" translatable="false">/OCR to QR/</string>
    <string name="action_history">History</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_scrolling" translatable="false">Scrolling</string>
    <string name="action_delete" translatable="false">Delete all</string>
    <string name="created_at" translatable="false">Created At:</string>
    <string name="image_download_url" translatable="false">https://loremflickr.com/320/240</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
