<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="about"
            app:summary="@string/about_summary"
            app:title="@string/about_header" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/update_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="current_version"
            app:summary="@string/version_summary"
            app:title="@string/version_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="check_update"
            app:summary="@string/update_summary"
            app:title="@string/update_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="help_category"
        app:title="@string/help_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="feedback"
            app:summary="@string/feedback_summary"
            app:title="@string/feedback_title" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
